--- a/ecmwf-opendata/config.json
+++ b/ecmwf-opendata/config.json
@@ -138,6 +138,15 @@
             ]
         },
         {
+            "name": "oper_fc_wind_speed_sfc",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_sfc",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_sfc"
+            ]
+        },
+        {
             "name": "oper_fc_divergence_pl_1000",
             "title": "Divergence",
             "data_source": "/gskydata/ecmwf-forecast/oper_fc_divergence_pl_1000",
@@ -1479,6 +1488,87 @@
             ]
         },
         {
+            "name": "oper_fc_wind_speed_pl_1000",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_1000",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_1000"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_925",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_925",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_925"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_850",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_850",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_850"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_700",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_700",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_700"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_500",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_500",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_500"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_300",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_300",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_300"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_250",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_250",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_250"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_200",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_200",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_200"
+            ]
+        },
+        {
+            "name": "oper_fc_wind_speed_pl_50",
+            "title": "Wind Speed",
+            "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_50",
+            "time_generator": "mas",
+            "rgb_products": [
+                "oper_fc_wind_speed_pl_50"
+            ]
+        },
+        {
             "name": "oper_fc_vorticity_pl_1000",
             "title": "Vorticity (relative)",
             "data_source": "/gskydata/ecmwf-forecast/oper_fc_vorticity_pl_1000",
@@ -1701,6 +1791,38 @@
             ],
             "identifier": "oper_fc_v_wind_sfc",
             "title": "oper_fc_v_wind_sfc Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_sfc",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_sfc"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_sfc",
+            "title": "oper_fc_wind_speed_sfc Geometry Drill",
             "abstract": "",
             "max_area": 10000,
             "pixel_stat": "mean",
@@ -3717,6 +3839,294 @@
             ],
             "identifier": "oper_fc_v_wind_pl_50",
             "title": "oper_fc_v_wind_pl_50 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_1000",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_1000"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_1000",
+            "title": "oper_fc_wind_speed_pl_1000 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_925",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_925"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_925",
+            "title": "oper_fc_wind_speed_pl_925 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_850",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_850"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_850",
+            "title": "oper_fc_wind_speed_pl_850 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_700",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_700"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_700",
+            "title": "oper_fc_wind_speed_pl_700 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_500",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_500"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_500",
+            "title": "oper_fc_wind_speed_pl_500 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_300",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_300"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_300",
+            "title": "oper_fc_wind_speed_pl_300 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_250",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_250"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_250",
+            "title": "oper_fc_wind_speed_pl_250 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_200",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_200"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_200",
+            "title": "oper_fc_wind_speed_pl_200 Geometry Drill",
+            "abstract": "",
+            "max_area": 10000,
+            "pixel_stat": "mean",
+            "complex_data": [
+                {
+                    "identifier": "geometry",
+                    "title": "Geometry",
+                    "abstract": "",
+                    "mime_type": "application/vnd.geo+json",
+                    "schema": "http://geojson.org/geojson-spec.html",
+                    "min_occurs": 1
+                }
+            ],
+            "literal_data": [
+                {
+                    "identifier": "geometry_id",
+                    "title": "Geometry ID"
+                }
+            ]
+        },
+        {
+            "data_sources": [
+                {
+                    "data_source": "/gskydata/ecmwf-forecast/oper_fc_wind_speed_pl_50",
+                    "rgb_products": [
+                        "oper_fc_wind_speed_pl_50"
+                    ],
+                    "metadata_url": "/templates/WPS/date_value.tpl"
+                }
+            ],
+            "identifier": "oper_fc_wind_speed_pl_50",
+            "title": "oper_fc_wind_speed_pl_50 Geometry Drill",
             "abstract": "",
             "max_area": 10000,
             "pixel_stat": "mean",
